--- a/glazewm_config.yaml
+++ b/glazewm_config.yaml
@@ -169,31 +169,31 @@ window_rules:
   
   
   
-  - commands: ["move --workspace 1"]
+  - commands: ["move --workspace 1","focus --workspace 1"]
     match:
       - window_process: { regex: "brave|chrome" }
       
-  - commands: ["move --workspace 2"]
+  - commands: ["move --workspace 2","focus --workspace 2"]
     match:
       - window_process: { regex: "winword|Obsidian" }
       
-  - commands: ["move --workspace 3"]
+  - commands: ["move --workspace 3","focus --workspace 3"]
     match:
       - window_process: { regex: "Code|qtcreator|qteditor|VBoxSDS|VirtualBoxVM" }  
       
-  - commands: ["move --workspace 4"]
+  - commands: ["move --workspace 4","focus --workspace 4"]
     match:
-      - window_process: { regex: "qemu-system-x86_64|qml2puppet-4.6.1|qtdesignstudio" }
+      - window_process: { regex: "qtdesignstudio" }
        
-  - commands: ["move --workspace 5"]
+  - commands: ["move --workspace 5","focus --workspace 5"]
     match:
       - window_process: { regex: "Discord|Telegram|vivaldi" }
       
-  - commands: ["move --workspace 6"]
+  - commands: ["move --workspace 6","focus --workspace 6"]
     match:
       - window_process: { regex: "GameRanger|steam|EpicGamesLauncher" }
 
-  - commands: ["move --workspace 7"]
+  - commands: ["move --workspace 7","focus --workspace 7"]
     match:
       - window_title: { regex: "Youtube" }
    
@@ -202,7 +202,7 @@ window_rules:
    #Games
   - commands: ["ignore"]
     match:
-      - window_process: { regex: "RocketLeague|Generals|Valorant" }
+      - window_process: { regex: "RocketLeague|Generals|Valorant|qemu-system-x86_64|qml2puppet-4.6.1" }
       
   - commands: ["ignore"]
     match:
