--- a/glazewm_config.yaml
+++ b/glazewm_config.yaml
@@ -94,7 +94,7 @@ window_behavior:
       centered: true
 
       # Whether to show floating windows as always on top.
-      shown_on_top: false
+      shown_on_top: true
 
     fullscreen:
       # Maximize the window if possible. If the window doesn't have a
@@ -137,11 +137,11 @@ workspaces:
     bind_to_monitor: 1
     
   - name: "8"
-    display_name: "8"
+    display_name: "8) 📚"
     bind_to_monitor: 0
     
   - name: "9"
-    display_name: "9"
+    display_name: "9) 📔"
     bind_to_monitor: 0
 
 
@@ -163,9 +163,11 @@ window_rules:
         window_title: { regex: '.*? - Peek' }
       - window_process: { equals: 'Lively' }
         window_class: { regex: 'HwndWrapper' }
-      - window_process: { equals: "Taskmgr" }
-        
-  
+      
+      
+  - commands: ['set-floating']
+    match:
+      - window_process: { equals: "Taskmgr" }  
   
   
   
@@ -175,7 +177,7 @@ window_rules:
       
   - commands: ["move --workspace 2","focus --workspace 2"]
     match:
-      - window_process: { regex: "winword|Obsidian" }
+      - window_process: { regex: "WINWORD.EXE|Obsidian" }
       
   - commands: ["move --workspace 3","focus --workspace 3"]
     match:
@@ -206,17 +208,8 @@ window_rules:
       
   - commands: ["ignore"]
     match:
-      - window_class: { regex: "#32770" }
+      - window_class: { regex: "#32770|KeyboardTools|Message|SunAwtDialog" }
       
-  - commands: ["ignore"]
-    match:
-      - window_class: { regex: "Message" }
-      
-  - commands: ["ignore"]
-    match:
-      - window_class: { regex: "KeyboardTools" }
-      
-   
    
 
 binding_modes:
