--- a/glazewm_config.yaml
+++ b/glazewm_config.yaml
@@ -118,31 +118,33 @@ workspaces:
     
   - name: "3"
     display_name: "3) 🖥️ workspace"
-    bind_to_monitor: 0
+    bind_to_monitor: 1
     
   - name: "4"
-    display_name: "4) 🖥️ workspace"
+    display_name: "4) 💻 workspace"
     bind_to_monitor: 1
     
   - name: "5"
-    display_name: "5) 📧 messaging"
-    bind_to_monitor: 1
+    display_name: "5) 📚 workspace"
+    bind_to_monitor: 0
     
   - name: "6"
-    display_name: "6) 🎮 gaming"
-    bind_to_monitor: 1
-    
+    display_name: "6) 📔 workspace"
+    bind_to_monitor: 0
+ 
   - name: "7"
-    display_name: "7) 🎵 multimedia"
+    display_name: "7) 📧 messaging"
     bind_to_monitor: 1
     
   - name: "8"
-    display_name: "8) 📚"
-    bind_to_monitor: 0
+    display_name: "8) 🎮 gaming"
+    bind_to_monitor: 1
     
   - name: "9"
-    display_name: "9) 📔"
-    bind_to_monitor: 0
+    display_name: "9) 🎵 multimedia"
+    bind_to_monitor: 1
+    
+
 
 
 
@@ -187,18 +189,14 @@ window_rules:
     match:
       - window_process: { regex: "qtdesignstudio" }
        
-  - commands: ["move --workspace 5","focus --workspace 5"]
+  - commands: ["move --workspace 7","focus --workspace 7"]
     match:
       - window_process: { regex: "Discord|Telegram|vivaldi" }
       
-  - commands: ["move --workspace 6","focus --workspace 6"]
+  - commands: ["move --workspace 8","focus --workspace 8"]
     match:
       - window_process: { regex: "GameRanger|steam|EpicGamesLauncher" }
 
-  - commands: ["move --workspace 7","focus --workspace 7"]
-    match:
-      - window_title: { regex: "Youtube" }
-   
    
    
    #Games
@@ -208,7 +206,7 @@ window_rules:
       
   - commands: ["ignore"]
     match:
-      - window_class: { regex: "#32770|KeyboardTools|Message|SunAwtDialog" }
+      - window_class: { regex: "#32770|#32768|PROGRESS_CLASS|BUTTON|MONTHCAL_CLASS|RichEdit|COMBOBOX|KeyboardTools|Message|SunAwtDialog" }
       
    
 
